syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

enum McsStatusCode {
  // Current active claim.  This is an internal MCS MPAP status, and will only display online
  // in related history.
  STATUS_CODE_ACTIVE_A = 0                                          [(string_value) = "A"];

  // Suspended.  All pending claims will show this status when they are viewed online.  All other
  // pending claim statuses are used internally by MCS MPAP only.
  STATUS_CODE_SUSPENDED = 1                                         [(string_value) = "B"];

  // Approved awaiting CWF response through MPAP, claim processed with no outstanding edits/audits
  // through MPAP and queried.
  STATUS_CODE_APPROVED_AWAITING_CWF_RESPONSE = 2                    [(string_value) = "C"];

  // Approved and paid; CAP physician no pay detail lines.
  STATUS_CODE_APPROVED_AND_PAID_D = 3                               [(string_value) = "D"];

  // Denied; set based on the history usage indicator on the AA segment of a denial edit or audit.
  STATUS_CODE_DENIED_E = 4                                          [(string_value) = "E"];

  // Full claim refund - EGHP, used only when an EGHP accounts receivable has been satisfied (RG type
  // AR).  This status is for display purposes only, internally the claim status would be a ‘y’.
  STATUS_CODE_FULL_REFUND_F = 5                                     [(string_value) = "F"];

  // Partial refund applied, partial refund was calculated for the claim but was applied to something
  // else outstanding, such as an AR.
  STATUS_CODE_PARTIAL_REFUND_G = 6                                  [(string_value) = "G"];

  // Claim still active. This is an internal MCS MPAP status, and will never display online.
  STATUS_CODE_ACTIVE_J = 7                                          [(string_value) = "J"];

  // Claim in pending suspense, used as history for duplicate audits but not MPAP (relationship or
  // negative relationship audit).  This is an internal MCS MPAP status, and does not display online
  // except as related history or on a bene research document (BRD). The status can be set several ways:
  //   * claim has no significant claim-level audit failed, but has claim-level edit suspense (does
  //     not look at history usage on edit)
  //   * claim or detail suspends for a post-CWF audit
  //   * detail suspends with ‘f’ disposition audit that has a history usage of ‘3’
  STATUS_CODE_PENDING_SUSPENSE = 8                                  [(string_value) = "K"];

  // CWF suspense, no MPAP, the HIC change trailer on the claim has a different cross-reference HIC than
  // the ‘h’ trailer on eligibility.
  // Note:  the ‘L’ status is an internal status and will not appear on a claim.  While the HIC is being
  // changed, the claim will have an ‘L’ status until the change is complete.
  STATUS_CODE_CWF_SUSPENSE = 9                                      [(string_value) = "L"];

  // Approved and paid (includes all deductible) - currently not used.
  STATUS_CODE_APPROVED_AND_PAID_M = 10                               [(string_value) = "M"];

  // Denied for payment (excludes deductible), set based on the history usage (AA segment) indicator on a
  // denial edit or audit.
  STATUS_CODE_DENIED_FOR_PAYMENT = 11                               [(string_value) = "N"];

  // Partial claim refund - EGHP, used only when an EGHP accounts receivable has been satisfied (RG type AR).
  // This status is for display purposes only, internally the claim status would be a ‘g’.
  STATUS_CODE_PARTIAL_CLAIM_REFUND_P = 12                           [(string_value) = "P"];

  // Adjusted - claim has been replaced by a full claim adjustment.
  STATUS_CODE_ADJUSTED = 13                                         [(string_value) = "Q"];

  // Claim has been deleted from the system. When a claim is deleted (transferred to location 090), the claim
  // status and the detail status are both set to ‘R’.
  STATUS_CODE_DELETED_FROM_SYSTEM_R = 14                            [(string_value) = "R"];

  // Paid but not for dup use - currently not used.
  STATUS_CODE_PAID_U = 15                                           [(string_value) = "U"];

  // Denied, but not for dup use, set based on the history usage indicator on the AA segment of a denial edit
  // or audit.
  STATUS_CODE_DENIED_V = 16                                         [(string_value) = "V"];

  // Rejected.  This status is set for Assigned and Non-Assigned claims, based on the receipt date, the bene
  // submission form, and the reject indicator which is MSG ACTION = RJ or R2 on the Narrative Message Usage
  // file (NA).  If all details are rejected (status ‘W’) then the claim status is set to rejected (‘W’).
  // Unassigned details with receipt dates prior to July 1, 2005 that have incomplete or invalid information
  // will be denied, not rejected.
  STATUS_CODE_REJECTED = 17                                         [(string_value) = "W"];

  // Partial refund, claim that is a partial void and a split pay.
  STATUS_CODE_PARTIAL_REFUND_X = 18                                 [(string_value) = "X"];

  // Full refund, full amount of claim payment was returned.
  STATUS_CODE_FULL_REFUND_Y = 19                                    [(string_value) = "Y"];

  // Voided, full void has been issued for the claim.
  STATUS_CODE_VOIDED = 20                                           [(string_value) = "Z"];

  // Current active claim, separate history. This is an internal MCS MPAP status, and will only display
  // online in related history.  This status applies to the header of claims that contain a demonstration
  // number that has been flagged for separate history in the HXXTDEMO table.
  STATUS_CODE_ACTIVE_SEPARATE_HISTORY = 21                          [(string_value) = "1"];

  // Suspended, separate history.  All pending claims will show this status when they are viewed online.
  // All other pending claim statuses are used internally by MCS MPAP only.  This status applies to the
  // header of claims that contain a demonstration number that has been flagged for separate history in
  // the HXXTDEMO table.
  STATUS_CODE_SUSPENDED_SEPARATE_HISTORY = 22                       [(string_value) = "2"];

  // Approved awaiting CWF response, separate history, through MPAP, claim processed with no outstanding
  // edits/audits through MPAP and queried.  This status applies to the header of claims that contain a
  // demonstration number that has been flagged for separate history in the HXXTDEMO table.
  STATUS_CODE_APPROVED_AWAITING_CWF_RESPONSE_SEPARATE_HISTORY = 23  [(string_value) = "3"];

  // Approved and paid, separate history.  This status applies to the header of claims that contain a
  // demonstration number that has been flagged for separate history in the HXXTDEMO table.
  STATUS_CODE_APPROVED_AND_PAID_SEPARATE_HISTORY = 24               [(string_value) = "4"];

  // Denied; separate history, set based on the history usage indicator on the AA segment of a denial
  // edit or audit.  This status applies to the header of claims that contain a demonstration number
  // that has been flagged for separate history in the HXXTDEMO table.
  STATUS_CODE_DENIED_SEPARATE_HISTORY = 25                          [(string_value) = "5"];

  // Not Used.
  STATUS_CODE_NOT_USED = 26                                         [(string_value) = "6"];

  // Claim moved to another HIC.  Claim was submitted and finalized for a HIC prior to the HIC being
  // changed.  (This status is internal to MCS only and will not display online.)
  STATUS_CODE_MOVED_TO_ANOTHER_HIC = 27                             [(string_value) = "8"];

  // Claim deleted from system.  Claim deleted from MPAP due to rework, the ICN is a duplicate of
  // another ICN in the system.  (This status is internal to MCS only and will not display online.)
  STATUS_CODE_DELETED_FROM_SYSTEM_9 = 28                            [(string_value) = "9"];
}
